--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "gruber-darker",
-    "displayName": "gruber-darker",
+    "displayName": "Gruber Darker",
     "description": "Tsoding's theme for vscode",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "engines": {
-        "vscode": "^1.52.0"
+        "vscode": "^1.53.2"
     },
     "categories": [
         "Themes"
@@ -17,5 +17,6 @@
                 "path": "./themes/Gruber-Darker-color-theme.json"
             }
         ]
-    }
+    },
+    "dependencies": {}
 }
